# CryptoBinance-deploy

./: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4bbd6cf5ad12_initial_schema.py  f2faf9503719_add_futures_and_extended_spot_tables.py
app/: config.py  database.py
app/models/: __init__.py  agg_trades.py  base.py  funding_rates.py  futures_ohlcv.py  liquidations.py  long_short_ratio.py  mark_price.py  ohlcv.py  open_interest.py  open_interest_hist.py  order_book.py  order_book_depth.py  recent_trades.py  scheduler_log.py  taker_volume.py  ticker.py  trading_pairs.py
app/repositories/: __init__.py  agg_trades_repo.py  funding_rates_repo.py  futures_ohlcv_repo.py  liquidations_repo.py  long_short_ratio_repo.py  mark_price_repo.py  ohlcv_repo.py  open_interest_hist_repo.py  open_interest_repo.py  order_book_depth_repo.py  order_book_repo.py  recent_trades_repo.py  scheduler_log_repo.py  taker_volume_repo.py  ticker_repo.py  trading_pairs_repo.py
app/scheduler/: jobs.py  scheduler.py
app/services/: binance_service.py
app/utils/: logger.py
scripts/: check_db.py  init_db.py  run_once.py  run_scheduler.py
tests/: test_binance_service.py
