[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crypto-research-catalyst"
version = "0.1.0"
description = "Production-grade cryptocurrency research platform — Binance + CoinGecko → PostgreSQL"
requires-python = ">=3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]